# snnax

./: .pre-commit-config.yaml  README.md  pyproject.toml
event_rde/: __init__.py  losses.py  paths.py  snn.py  solution.py
notebooks/: single_neuron.ipynb  spiking_neural_net.ipynb
notebooks/data/: single_neuron_fs_mse_2024-05-17-11  single_neuron_sig_mmd_2024-05-17-11
snnax/: __init__.py  helpers.py  snn.py
tests/: __init__.py  test_losses.py
